--- a/boards/rpi_pico/Cargo.toml
+++ b/boards/rpi_pico/Cargo.toml
@@ -21,6 +21,7 @@ jtag = ["bitbang"]
 swd = []
 swj = []
 ram-exec = ["rust-dap-rp2040/ram-exec"] # Execute-in-SRAM support
+jtag-swd= ["jtag", "swd"]
 
 [dependencies.rp-pico]
 git = "https://github.com/rp-rs/rp-hal.git"
